 * miscellaneous and bug fixes:
   * fixed parser bug that prevented loading binary data strings
   * starting a campaing without any installed now gives an error.
   * fixed issues with campaign info in non-compressed saved games
     (bug #11386)
   * Backported gracefull restart feature to server
   * Improved connection stability with slow connections.
   * Fixed a mememory leak in networking code
   * fixed an alignement issue which caused a SIGBUS on a Sparc 
     (debian bug #426318)
   * Fixed tokenizer not to strip CR from quoted string becaue it would destroy
     images transfered over network
   * added some includes to fix compilation problems with Sun Studio 12 
     (patch #1066)
   * fixed null-pointer reference in network code

Version 1.4.2:
 * campaigns
   * Liberty
     * Backport r25650 to fix graphics glitch (bug 11438)
 * language and i18n:
   * updated translations: Chinese, Chinese (Traditional), Croatian, Czech,
     Dutch, Finnish, French, German, Hungarian, Italian, Japanese, Lithuanian,
     Polish, Russian, Serbian, Slovak, Spanish, Turkish

Version 1.4.1:
 * campaigns:
   * Fixed/enforced internal gender id of various female heroes/foes
     (bug #11197)
   * Under the Burning Suns:
     * Minor cosmetic fixes
 * graphics:
   * Fixed broken TC on transport-galleon and drake walking corpse graphics
   * New portraits: Elvish Sorceress
 * language and i18n:
   * new translation: Croatian
   * updated translations: Chinese, Czech, Danish, Dutch, Finnish, French,
     Galician, German, Greek, Hungarian, Italian, Lithuanian, Japanese, Polish,
     Russian, Spanish, Swedish, Turkish, Valencian
 * map editor:
   * fixed not working "Update transition" and make "Delay transition update"
     directly trigger an update when toggled off.
 * miscellaneous and bug fixes:
   * Removed spurious -R linker switch from command line generated by the Boost
     M4 macros
   * Load-game dialog displays a scenario campaign's translated name rather than